# info_casino

./: .gitignore  casino.db  index.html  package-lock.json  package.json  pyproject.toml  test_game.py  test_script.py  test_slots.py  test_slots_ui.py  test_slots_win.py  test_ui_sim.py  vite.config.js
backend/: api.py  init_db.py
mobile/: package-lock.json  package.json
mobile/app/: index.jsx
src/: App.jsx  index.css
