[project]
name = "info-casino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "pillow>=12.1.1",
    "pycryptodome>=3.23.0",
    "pycryptodomex>=3.23.0",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
]
